# chungyak-alimi

./: .env.example  .gitignore  README.ko.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
config/: filters.yaml  profile.example.yaml
docs/: plan.md
src/: config.py  db.py  filters.py  models.py  notify.py  pipeline.py  scoring.py
src/collectors/: applyhome.py  lh.py  vworld.py
src/web/: app.py
src/web/templates/: base.html  detail.html  index.html  login.html
systemd/: chungyak-collect.service  chungyak-collect.timer  chungyak-web.service
tests/: test_applyhome.py  test_base_template.py  test_db.py  test_detail_template.py  test_filters.py  test_housetype.py  test_index_template.py  test_lh.py  test_login_template.py  test_my_rank.py  test_notify.py  test_pipeline.py  test_scoring.py  test_supersede.py  test_vworld.py  test_web.py
